[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openbb-adanos"
version = "1.2.2"
description = "Stock sentiment data from Reddit, X/Twitter, and Polymarket for OpenBB"
authors = ["Alex Schneider"]
license = "MIT"
readme = "README.md"
homepage = "https://adanos.org"
repository = "https://github.com/adanos-software/openbb-adanos"
documentation = "https://github.com/adanos-software/openbb-adanos#readme"
keywords = ["openbb", "stocks", "sentiment", "reddit", "news", "x", "polymarket", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
packages = [{ include = "openbb_adanos" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openbb-core = ">=1.3.0"
httpx = ">=0.24.0"

[tool.poetry.plugins."openbb_provider_extension"]
adanos = "openbb_adanos:adanos_provider"

[tool.poetry.plugins."openbb_core_extension"]
adanos = "openbb_adanos.router:router"
